p3/confs/dev/deployement.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wil42-v1
  namespace: dev
  labels:
    app: wil42-v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wil42-v1
  template:
    metadata:
      labels:
        app: wil42-v1
    spec:
      containers:
      - name: wil42-v1
        image: wil42/playground:v1
        ports:
        - containerPort: 8888
---
apiVersion: v1
kind: Service
metadata:
  name: wil42-v1
  namespace: dev
spec:
  selector:
    app: wil42-v1
  ports:
    - port: 8888
